# shard

./: .clang-format  .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
cmake/: Coverage.cmake
include/shard/: Any.hpp  Array.hpp  Assert.hpp  Byte.hpp  DynamicArray.hpp  Exception.hpp  FilePath.hpp  HashMap.hpp  Map.hpp  Optional.hpp  Path.hpp  PtrDynamicArray.hpp  PtrVector.hpp  Set.hpp  SharedPtr.hpp  SourceLocation.hpp  SourceRange.hpp  StaticArray.hpp  String.hpp  UniquePtr.hpp  Variant.hpp  Vector.hpp  ViewPtr.hpp  error.hpp  exceptions.hpp  utility.hpp
include/shard/ast/: AnalysisContext.hpp  BreakStmt.hpp  ClassDecl.hpp  CompoundDecl.hpp  Decl.hpp  DeclContext.hpp  Decls.hpp  DoWhileStmt.hpp  DumpContext.hpp  Expr.hpp  Exprs.hpp  ForStmt.hpp  FunctionDecl.hpp  Module.hpp  NamespaceDecl.hpp  Node.hpp  ReturnStmt.hpp  Source.hpp  Stmt.hpp  StmtContainer.hpp  Stmts.hpp  SwitchStmt.hpp  Type.hpp  Unit.hpp  exceptions.hpp  utility.hpp
include/shard/ast/decl/: ClassDecl.hpp  CompoundDecl.hpp  FunctionDecl.hpp  NamespaceDecl.hpp  VariableDecl.hpp
include/shard/ast/expr/: BinaryExpr.hpp  BoolLiteralExpr.hpp  CharLiteralExpr.hpp  FloatLiteralExpr.hpp  FunctionCallExpr.hpp  IdentifierExpr.hpp  IntLiteralExpr.hpp  MemberAccessExpr.hpp  NullLiteralExpr.hpp  ParenExpr.hpp  (+4 more)
include/shard/builtin/: Parser.hpp
include/shard/core/: Assert.hpp  Byte.hpp  CMakeLists.txt  Exception.hpp  FixedArray.hpp  SharedPtr.hpp  String.hpp  StringView.hpp  UniquePtr.hpp  ViewPtr.hpp  error.hpp  utility.hpp
include/shard/interpreter/: Context.hpp  Exception.hpp  Frame.hpp  Function.hpp  Interpreter.hpp  Scope.hpp  Symbol.hpp  Value.hpp  Variable.hpp
include/shard/ir/: Block.hpp  Constant.hpp  Function.hpp  Instruction.hpp  Module.hpp  Serializer.hpp  Type.hpp  Value.hpp
include/shard/parser/: Parser.hpp  ParserException.hpp  exceptions.hpp
include/shard/tokenizer/: KeywordType.hpp  Source.hpp  SourceIterator.hpp  Token.def  Token.hpp  TokenFilterIterator.hpp  TokenType.hpp  Tokenizer.hpp  TokenizerException.hpp  TokenizerIterator.hpp  exceptions.hpp
src/: CMakeLists.txt  Source.hpp  Tokenizer.cpp  Tokenizer.hpp  TokenizerException.hpp  error.cpp
src/ast/: AnalysisContext.cpp  BreakStmt.cpp  CMakeLists.txt  CaseStmt.cpp  ClassDecl.cpp  CompoundDecl.cpp  CompoundStmt.cpp  ContinueStmt.cpp  Decl.cpp  DeclContext.cpp  DeclStmt.cpp  DefaultStmt.cpp  DoWhileStmt.cpp  DumpContext.cpp  Expr.cpp  ExprStmt.cpp  ForStmt.cpp  FunctionDecl.cpp  IfStmt.cpp  Module.cpp  NamespaceDecl.cpp  Node.cpp  ReturnStmt.cpp  Source.cpp  Stmt.cpp  StmtContainer.cpp  SwitchStmt.cpp  Type.cpp  Unit.cpp  VariableDecl.cpp  WhileStmt.cpp
src/ast/decl/: ClassDecl.cpp  CompoundDecl.cpp  FunctionDecl.cpp  NamespaceDecl.cpp  VariableDecl.cpp
src/ast/expr/: BinaryExpr.cpp  BoolLiteralExpr.cpp  CharLiteralExpr.cpp  FloatLiteralExpr.cpp  FunctionCallExpr.cpp  IdentifierExpr.cpp  IntLiteralExpr.cpp  MemberAccessExpr.cpp  NullLiteralExpr.cpp  ParenExpr.cpp  StringLiteralExpr.cpp  SubscriptExpr.cpp  TernaryExpr.cpp  UnaryExpr.cpp
src/ast/stmt/: BreakStmt.cpp  CaseStmt.cpp  CompoundStmt.cpp  ContinueStmt.cpp  DeclStmt.cpp  DefaultStmt.cpp  DoWhileStmt.cpp  ExprStmt.cpp  ForStmt.cpp  IfStmt.cpp  ReturnStmt.cpp  SwitchStmt.cpp  WhileStmt.cpp
src/builtin/: CMakeLists.txt  Parser.cpp
src/core/: error.cpp
src/interpreter/: CMakeLists.txt  Context.cpp  Interpreter.cpp  Scope.cpp  Symbol.cpp  Value.cpp  Variable.cpp
src/ir/: CMakeLists.txt  Function.cpp  Module.cpp  Serializer_read.cpp  Serializer_write.cpp
src/parser/: CMakeLists.txt  Parser.cpp
src/tokenizer/: CMakeLists.txt  Source.cpp  SourceIterator.cpp  Tokenizer.cpp  TokenizerIterator.cpp
test/: CMakeLists.txt  SourceLocation.cpp  SourceLocation_test.cpp  ViewPtr.cpp  ViewPtr_test.cpp  source-test.cpp  tokenizer-test.cpp
test/ast/: BreakStmt_test.cpp  CMakeLists.txt  CaseStmt_test.cpp  CharLiteralExpr_test.cpp  ClassDecl_test.cpp  CompoundStmt_test.cpp  ContinueStmt_test.cpp  Decl.cpp  DeclContextTest.cpp  DeclStmt_test.cpp  DeclTest.cpp  DefaultStmt_test.cpp  DoWhileStmt_test.cpp  ExprStmt_test.cpp  ExprTest.cpp  Expr_test.cpp  FloatLiteralExpr_test.cpp  ForStmt_test.cpp  FunctionCallExpr_test.cpp  FunctionDecl_test.cpp  IfStmt_test.cpp  MemberAccessExpr_test.cpp  NamespaceDecl_test.cpp  Node_test.cpp  ReturnStmt_test.cpp  Source_test.cpp  Stmt.cpp  StmtTest.cpp  Stmt_test.cpp  SubscriptExpr_test.cpp  SwitchStmt_test.cpp  Type.cpp  TypeTest.cpp  Type_test.cpp  VariableDecl_test.cpp  WhileStmt_test.cpp
test/ast/decl/: ClassDecl_test.cpp  FunctionDecl_test.cpp  NamespaceDecl_test.cpp  VariableDecl_test.cpp
test/ast/expr/: BinaryExpr_test.cpp  BoolLiteralExpr_test.cpp  CharLiteralExpr_test.cpp  FloatLiteralExpr_test.cpp  FunctionCallExpr_test.cpp  IdentifierExpr_test.cpp  IntLiteralExpr_test.cpp  MemberAccessExpr_test.cpp  NullLiteralExpr_test.cpp  ParenExpr_test.cpp  StringLiteralExpr_test.cpp  SubscriptExpr_test.cpp  TernaryExpr_test.cpp  UnaryExpr_test.cpp
test/ast/stmt/: BreakStmt_test.cpp  CaseStmt_test.cpp  CompoundStmt_test.cpp  ContinueStmt_test.cpp  DeclStmt_test.cpp  DefaultStmt_test.cpp  DoWhileStmt_test.cpp  ExprStmt_test.cpp  ForStmt_test.cpp  IfStmt_test.cpp  ReturnStmt_test.cpp  SwitchStmt_test.cpp  WhileStmt_test.cpp
test/interpreter/: CMakeLists.txt  Exception_test.cpp  Frame_test.cpp  Interpreter_test.cpp  Value_test.cpp
test/ir/: Block_test.cpp  CMakeLists.txt  Constant_test.cpp  Function_test.cpp  Instruction_test.cpp  Module_test.cpp  Serializer_test.cpp  Type_test.cpp
test/parser/: CMakeLists.txt  ParserTest.cpp  Parser_test.cpp  exceptions_test.cpp
test/tokenizer/: CMakeLists.txt  SourceIterator_test.cpp  SourceTest-file_basic.txt  SourceTest.cpp  Source_test.cpp  TokenFilterIterator_test.cpp  Token_test.cpp  TokenizerIterator_test.cpp  TokenizerTest.cpp  Tokenizer_test.cpp  exceptions_test.cpp  source-test.cpp  tokenizer-test.cpp
tools/: CMakeLists.txt
tools/astdump/: CMakeLists.txt  main.cpp
tools/interpreter/: CMakeLists.txt  main.cpp
tools/irdump/: CMakeLists.txt  main.cpp
(+13 files in other folders)
